# rust-note-rest

./: .gitignore  Cargo.toml  README.MD
migrations/: 20240628035000_create_notes_table.up.sql
src/: handler.rs  main.rs  models.rs  schema.rs
