[package]
name = "rust-note-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sqlx = { version = "0.7.4", features = [
    "runtime-async-std-native-tls",
    "chrono",
    "uuid",
    "postgres",
] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.9.1", features = ["serde", "v4"] }
